--- a/footer.html
+++ b/footer.html
@@ -1,10 +1,12 @@
-<link rel="stylesheet" href="styles.css">
-  <footer>
-    <p>&copy; 2023 My Website. All rights reserved.</p>
+
+<!-- saved from url=(0033)http://127.0.0.1:5500/footer.html -->
+<html style="height: 357px;"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><link rel="stylesheet" href="./styles.css">
+  </head><body style="height: 357px;"><footer>
+    <p>© 2023 My Website. All rights reserved.</p>
     <ul>
-      <li><a href="/privacy-policy">Privacy Policy</a></li>
-      <li><a href="/terms-of-service">Terms of Service</a></li>
-      <li><a href="/contact">Contact Us</a></li>
+      <li><a href="http://127.0.0.1:5500/privacy-policy">Privacy Policy</a></li>
+      <li><a href="http://127.0.0.1:5500/terms-of-service">Terms of Service</a></li>
+      <li><a href="http://127.0.0.1:5500/contact">Contact Us</a></li>
     </ul>
   </footer>
-  <script src="script.js"></script>
+  <script src="./script.js"></script></body></html>
