--- a/header.html
+++ b/header.html
@@ -1,12 +1,19 @@
-<link rel="stylesheet" href="styles.css">
-<header>
+<html style="height: 100px;">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <link rel="stylesheet" href="./styles.css">
+</head>
+<body style="height: 100px;">
+  <header>
         <nav>
           <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/services">Services</a></li>
-            <li><a href="/contact">Contact</a></li>
+            <li><a href="http://127.0.0.1:5500/">Home</a></li>
+            <li><a href="http://127.0.0.1:5500/about">About</a></li>
+            <li><a href="http://127.0.0.1:5500/services">Services</a></li>
+            <li><a href="http://127.0.0.1:5500/contact">Contact</a></li>
           </ul>
         </nav>
       </header>
-      <script src="script.js"></script>
+    <script src="./script.js"></script>
+</body>
+</html>
