--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <title>My Website</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <script src="script.js"></script>
   </head>
   <body>
-    <object type="text/html" data="header.html" width="100%" height="100px"></object>
+    <object type="text/html" data="header.html"></object>
     <main>
       <form action="/login" method="post">
         <label for="username">Username:</label><br>
@@ -16,6 +15,6 @@
         <input type="submit" value="Log In">
       </form>
     </main>
-    <object type="text/html" data="footer.html" width="100%" height="100px"></object>
+    <object type="text/html" data="footer.html"></object>
   </body>
 </html>
