--- a/header.html
+++ b/header.html
@@ -1,9 +1,4 @@
-<html style="height: 100px;">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <link rel="stylesheet" href="./styles.css">
-</head>
-<body style="height: 100px;">
+<link rel="stylesheet" type="text/css" href="styles.css">
   <header>
         <nav>
           <ul>
@@ -13,7 +8,4 @@
             <li><a href="http://127.0.0.1:5500/contact">Contact</a></li>
           </ul>
         </nav>
-      </header>
-    <script src="./script.js"></script>
-</body>
-</html>
+      </header> 
