--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <object type="text/html" data="header.html"></object>
+    
     <main>
-      <form action="/login" method="post">
+      <form action="login" method="post">
         <label for="username">Username:</label><br>
         <input type="text" id="username" name="username"><br>
         <label for="password">Password:</label><br>
         <input type="password" id="password" name="password"><br>
         <input type="submit" value="Log In">
       </form>
-    </main>
-    <object type="text/html" data="footer.html"></object>
+    </main> 
   </body>
 </html>
