--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,33 @@
+<style>
+  footer {
+      background-color: #333;
+      color: #fff;
+      padding: 1rem;
+      text-align: center;
+      margin-top: auto;
+    }
 
-<!-- saved from url=(0033)http://127.0.0.1:5500/footer.html -->
-<html style="height: 357px;"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><link rel="stylesheet" href="./styles.css">
-  </head><body style="height: 357px;"><footer>
+    footer p {
+      margin: 0;
+    }
+
+    footer ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    footer li {
+      display: inline-block;
+      margin-right: 1rem;
+    }
+
+    footer a {
+      color: #fff;
+      text-decoration: none;
+    }
+</style>
+<footer>
     <p>© 2023 My Website. All rights reserved.</p>
     <ul>
       <li><a href="http://127.0.0.1:5500/privacy-policy">Privacy Policy</a></li>
@@ -9,4 +35,4 @@
       <li><a href="http://127.0.0.1:5500/contact">Contact Us</a></li>
     </ul>
   </footer>
-  <script src="./script.js"></script></body></html>
+  
