--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <style>
+  <!-- <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
@@ -90,6 +90,8 @@
       padding: 0.5rem;
     }
   </style>
+-->
+<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <header>
@@ -112,6 +114,7 @@
       </form>
   </main>
   <footer>
+    <p>hello world!</p>
     <p>&copy; 2023 My Website</p>
   </footer>
 </body>
